syntax = "proto3";

package zksync.config.pruning;

message Pruning {
  optional bool enabled = 1;
  optional uint32 chunk_size = 2;
  optional uint64 removal_delay_sec = 3;
  optional uint64 data_retention_sec = 4;
}
